welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:14: error: expected start of definition
	override def forward(i:Int)  { 
                 ^LineByLine:17: error: expected start of definition
	override def forward()  {
                 ^LineByLine:20: error: expected start of definition
	override def backward(i:Int) {
                 ^LineByLine:23: error: expected start of definition
	override def backward() {
                 ^LineByLine:26: error: Unmatched closing brace '}' ignored here
}
^